-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.3.1
-
Ubuntu 12,04 64-bit, JDK 1.8 build 40, Ant 1.9, Qt 5.4.1 with Qt Creator 3.3.1, Android SDK with all the API levels starting from API Level 10, and Android NDK r10d.
After a fresh install of Ubuntu 12.04 and Qt 5.4.1, I'm unable to run apps on the Android device from creator. According to the build log, it appears that androiddeployqt is passed with wrong -android-platform, "android--1", which is probably leading to package failure. androiddeployqt continues with a warning about the platform, and fails much later with the code 14.
| For Gerrit Dashboard: QTCREATORBUG-14155 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 110020,3 | Doc: Added Ubuntu-specific JDK setup info. | 5.5 | qt/qtdoc | Status: ABANDONED | -2 | 0 |
| 125439,2 | Android: Support non distro installations of JDK | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |